--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -35,5 +35,6 @@
 		<PackageReference Include="System.Net.Http" />
 		<PackageReference Include="System.Text.RegularExpressions" />
 		<PackageReference Include="System.IO.Abstractions" />
+		<PackageReference Include="ZCS.DataContractResolver" />
 	</ItemGroup>
 </Project>
